syntax = "proto3";

package infrastructure.proto.health.v1;

service HealthService {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {}
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
}
